Remove old methods from config loaders (no longer used)